crud-dropdown-input: Fix text wrap in button

--- a/crud-dropdown-input/styles/new-item-form.less
+++ b/crud-dropdown-input/styles/new-item-form.less
@@ -21,6 +21,7 @@
 			}
 
 			.btn {
+				flex-shrink: 0;
 				border-top-left-radius: 0;
 				border-bottom-left-radius: 0;
 			}
